# aiogram_test

./: .gitignore  README.md  command_handler.py  logger.py  main.py  main_handler.py  pyproject.toml  requirements.txt  settings.py
keyboards/: countries.py  inline.py  kb_builder.py  kb_config.py
texts/: buttons.yml  messages.yml  resource_keys.py  text_manager.py
